# pitch_shifter

./: .gitignore  CODE_CHANGES_REFERENCE.md  Dockerfile  FIXES_SUMMARY.md  README.md  TEST_GUIDE.sh  pyproject.toml  requirements.txt
.github/agents/: web-playback-youtube-fixer.agent.md
frontend/: app.js  index.html  styles.css
k8s/: cert-issuer.yaml  cookies.txt  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
memories/session/: fixes.md
src/pitch_shifter_backend/: __init__.py  main.py
src/pitch_shifter_backend/api/: __init__.py  routes.py
src/pitch_shifter_backend/core/: __init__.py  config.py
src/pitch_shifter_backend/services/: __init__.py  jobs.py  processing.py  storage.py
